[package]
name = "clocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
cli-table = "0.4.7"
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
tempfile = "3.10.1"
 